--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   freezed_annotation: ^3.0.0
   flutter_dotenv: ^5.2.1
   url_launcher: ^6.3.1
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
